update preprocesssing to match new config

--- a/pipelines/institution_id/config-TEMPLATE.toml
+++ b/pipelines/institution_id/config-TEMPLATE.toml
@@ -11,13 +11,15 @@ pred_prob_col = "pred_prob"
 pos_label = true
 random_state = 12345
 
-[datasets.ingested_YYYYMMDD]
+[datasets.bronze]
 raw_course = { file_path = "/Volumes/CATALOG/INST_ID_bronze/INST_ID_bronze_file_volume/FILE_NAME_COURSE.csv" }
 raw_cohort = { file_path = "/Volumes/CATALOG/INST_ID_bronze/INST_ID_bronze_file_volume/FILE_NAME_COHORT.csv" }
+
+[datasets.silver]
 preprocessed = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_preprocessed" }
-# optionally, if you want to save predictions on their own
-# predictions = { table_path = "CATALOG.INST_ID_gold.DATASET_NAME_predictions" }
-finalized = { table_path = "CATALOG.INST_ID_gold.INST_ID_advisor_output_ETC_YYYYMMDD" }
+
+[datasets.gold]
+advisor_output = { table_path = "CATALOG.INST_ID_gold.INST_ID_advisor_output_ETC_YYYYMMDD" }
 
 [model]
 experiment_id = "EXPERIMENT_ID"
