--- a/src/student_success_tool/assets/pdp/features_table.toml
+++ b/src/student_success_tool/assets/pdp/features_table.toml
@@ -17,7 +17,8 @@ section_num_students_enrolled_std = { name = "standard deviation in number of st
 num_courses_core_course_y = { name = "number of core courses taken this term" }
 num_courses_enrolled_at_other_institution_s_y = { name = "number of courses taken this term while enrolled at another institution" }
 'num_courses_course_subject_area_(\d+)' = { name = "number of courses taken in subject area {} this term" }
-'num_courses_course_id_(.*)' = { name = "course '{}' taken this term" }
+'num_courses_course_id_(.*)' = { name = "number of times course '{}' taken this term" }
+num_courses_course_type_cc_cd = { name = "total number of college developmental, remedial, or preparatory courses taken this term" }
 num_courses_course_type_cu = { name = "number of college-level, undergraduate courses taken this term" }
 num_courses_course_type_cg = { name = "number of college-level, graduate courses taken this term" }
 num_courses_course_type_cc = { name = "number of college developmental, remedial, or preparatory courses taken this term applicable towards credential completion requirements" }
@@ -59,6 +60,11 @@ num_courses_course_grade_b = { name = "number of B grades earned this term" }
 num_courses_course_grade_c = { name = "number of C grades earned this term" }
 num_courses_course_grade_d = { name = "number of D grades earned this term" }
 num_courses_course_grade_f = { name = "number of F grades earned this term" }
+num_courses_course_grade_w = { name = "number of W (withdrawn from) grades earned this term" }
+num_courses_course_grade_i = { name = "number of O (other) grades earned this term" }
+num_courses_course_grade_p = { name = "number of P (pass) grades earned this term" }
+num_courses_course_grade_other = { name = "number of I (incomplete) grades earned this term" }
+num_courses_course_grade_audit = { name = "number of courses audited this term" }
 num_courses_grade_is_failing_or_withdrawal = { name = "number of courses failed or withdrawn this term" }
 num_courses_grade_above_section_avg = { name = "number of courses this term with grades above the sections' average grades" }
 cohort_term = { name = "student's cohort (enrollment) term" }
@@ -111,8 +117,9 @@ frac_courses_enrolled_at_other_institution_s_y = { name = "fraction of courses t
 'frac_courses_course_id_(.*)' = { name = "fraction of times course '{}' taken this term" }
 frac_courses_course_type_cu = { name = "fraction of college-level, undergraduate courses taken this term" }
 frac_courses_course_type_cg = { name = "fraction of college-level, graduate courses taken this term" }
-frac_courses_course_type_cc = { name = "fraction of college developmental, remedial, or preparatory courses taken this term applicable towards credential completion requirements" }
-frac_courses_course_type_cd = { name = "fraction of college developmental, remedial, or preparatory courses taken this term not applicable towards credential completion requirements" }
+frac_courses_course_type_cc_cd = { name = "total fraction of college developmental, remedial, or preparatory courses taken this term" }
+frac_courses_course_type_cc = { name = "fraction of college developmental, remedial, or preparatory courses taken this term applicable towards credential completion requirements taken this term" }
+frac_courses_course_type_cd = { name = "fraction of college developmental, remedial, or preparatory courses taken this term not applicable towards credential completion requirements taken this term" }
 frac_courses_course_type_el = { name = "fraction of ESL courses taken this term" }
 frac_courses_course_type_ab = { name = "fraction of adult basic education courses taken this term" }
 frac_courses_course_type_ge = { name = "fraction of adult secondary education / GED courses taken this term" }
@@ -150,6 +157,11 @@ frac_courses_course_grade_b = { name = "fraction of B grades earned this term" }
 frac_courses_course_grade_c = { name = "fraction of C grades earned this term" }
 frac_courses_course_grade_d = { name = "fraction of D grades earned this term" }
 frac_courses_course_grade_f = { name = "fraction of F grades earned this term" }
+frac_courses_course_grade_p = { name = "fraction of P (pass) grades earned this term" }
+frac_courses_course_grade_w = { name = "fraction of W (withdrawn from) grades earned this term" }
+frac_courses_course_grade_i = { name = "fraction of I (incomplete) grades earned this term" }
+frac_courses_course_grade_other = { name = "fraction of O (other) grades earned this term" }
+frac_courses_course_grade_audit = { name = "fraction of courses audited earned this term" }
 frac_courses_grade_is_failing_or_withdrawal = { name = "fraction of courses failed or withdrawn this term" }
 frac_courses_grade_above_section_avg = { name = "fraction of courses this term with grades above the sections' average grades" }
 frac_courses_in_program_of_study_area_term_1 = { name = "fraction of courses taken this term in student's first-term program of study area" }
@@ -179,7 +191,7 @@ course_grade_numeric_mean_cummin = { name = "minimum numeric course grade so far
 course_grade_numeric_mean_cumstd = { name = "standard deviation in numeric course grades so far" }
 num_courses_cumsum = { name = "total number of courses taken so far" }
 num_courses_cummean = { name = "average number of courses taken per term so far" }
-num_courses_cummin = { name = "min. number of courses taken per term so far" }
+num_courses_cummin = { name = "minimum number of courses taken per term so far" }
 num_credits_attempted_cumsum = { name = "total number of credits attempted so far" }
 num_credits_attempted_cummean = { name = "average number of credits attempted per term so far" }
 num_credits_attempted_cummin = { name = "minimum number of credits attempted per term so far" }
@@ -196,8 +208,9 @@ num_courses_enrolled_at_other_institution_s_y_cumfrac = { name = "fraction of co
 'num_courses_course_id_(.*)_cumfrac' = { name = "fraction of times course '{}' taken so far" }
 num_courses_course_type_cu_cumfrac = { name = "fraction of college-level, undergraduate courses taken so far" }
 num_courses_course_type_cg_cumfrac = { name = "fraction of college-level, graduate courses taken so far" }
-num_courses_course_type_cc_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far applicable towards credential completion requirements" }
-num_courses_course_type_cd_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far not applicable towards credential completion requirements" }
+num_courses_course_type_cc_cd_cumfrac = { name = "fraction of total college developmental, remedial, or preparatory courses taken so far" }
+num_courses_course_type_cc_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far applicable towards credential completion requirements so far" }
+num_courses_course_type_cd_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far not applicable towards credential completion requirements so far" }
 num_courses_course_type_el_cumfrac = { name = "fraction of ESL courses taken so far" }
 num_courses_course_type_ab_cumfrac = { name = "fraction of adult basic education courses taken so far" }
 num_courses_course_type_ge_cumfrac = { name = "fraction of adult secondary education / GED courses taken so far" }
@@ -235,10 +248,15 @@ num_courses_course_grade_b_cumfrac = { name = "fraction of B grades earned so fa
 num_courses_course_grade_c_cumfrac = { name = "fraction of C grades earned so far" }
 num_courses_course_grade_d_cumfrac = { name = "fraction of D grades earned so far" }
 num_courses_course_grade_f_cumfrac = { name = "fraction of F grades earned so far" }
+num_courses_course_grade_p_cumfrac = { name = "fraction of P (pass) grades earned so far" }
+num_courses_course_grade_w_cumfrac = { name = "fraction of W (withdrawn from) grades earned so far" }
+num_courses_course_grade_i_cumfrac = { name = "fraction of I (incomplete) grades earned so far" }
+num_courses_course_grade_o_cumfrac = { name = "fraction of O (other) grades earned so far" }
+num_courses_course_grade_a_cumfrac = { name = "fraction of courses audited so far" }
 num_courses_grade_is_failing_or_withdrawal_cumfrac = { name = "fraction of courses failed or withdrawn so far" }
 num_courses_grade_above_section_avg_cumfrac = { name = "fraction of courses so far with grades above the sections' average grades" }
-num_courses_in_program_of_study_area_term_1_cumfrac = { name = "number of courses taken so far in student's first-term program of study area" }
-num_courses_in_program_of_study_area_year_1_cumfrac = { name = "number of courses taken so far in student's first-year program of study area" }
+num_courses_in_program_of_study_area_term_1_cumfrac = { name = "fraction of courses taken so far in student's first-term program of study area so far" }
+num_courses_in_program_of_study_area_year_1_cumfrac = { name = "fraction of courses taken so far in student's first-year program of study area so far" }
 cumfrac_terms_enrolled = { name = "fraction of all terms enrolled so far" }
 cumfrac_core_terms_enrolled = { name = "fraction of 'core' terms enrolled so far" }
 cumfrac_noncore_terms_enrolled = { name = "fraction of 'non-core' terms enrolled so far" }
@@ -249,9 +267,9 @@ course_level_mean_diff_prev_term = { name = "change in average course level this
 num_courses_diff_term_1_to_term_2 = { name = "change in number of courses taken in term 2 compared to term 1" }
 num_courses_diff_term_2_to_term_3 = { name = "change in number of courses taken in term 3 compared to term 2" }
 num_courses_diff_term_3_to_term_4 = { name = "change in number of courses taken in term 4 compared to term 3" }
-num_credits_earned_diff_term_1_to_term_2 = { name = "chang ein number of credits earned in term 2 compared to term 1" }
-num_credits_earned_diff_term_2_to_term_3 = { name = "chang ein number of credits earned in term 3 compared to term 2" }
-num_credits_earned_diff_term_3_to_term_4 = { name = "chang ein number of credits earned in term 4 compared to term 3" }
+num_credits_earned_diff_term_1_to_term_2 = { name = "change in number of credits earned in term 2 compared to term 1" }
+num_credits_earned_diff_term_2_to_term_3 = { name = "change in number of credits earned in term 3 compared to term 2" }
+num_credits_earned_diff_term_3_to_term_4 = { name = "change in number of credits earned in term 4 compared to term 3" }
 course_grade_numeric_mean_diff_term_1_to_term_2 = { name = "change in average numeric grade in term 2 compared to term 1" }
 course_grade_numeric_mean_diff_term_2_to_term_3 = { name = "change in average numeric grade in term 3 compared to term 2" }
 course_grade_numeric_mean_diff_term_3_to_term_4 = { name = "change in average numeric grade in term 4 compared to term 3" }
