--- a/pipelines/inference/pdp_inference/workflow_asset_bundle/resources/github_sourced_pdp_inference_pipeline.yml
+++ b/pipelines/inference/pdp_inference/workflow_asset_bundle/resources/github_sourced_pdp_inference_pipeline.yml
@@ -205,7 +205,7 @@ resources:
       git_source:
         git_url: https://github.com/datakind/student-success-tool
         git_provider: gitHub
-        git_branch: add-custom-converter-function
+        git_branch: develop
       tags:
         dev: kayla_wilding
       queue:
