--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,3 @@
 # ref: https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
-pdp/ @bdewilde @kaylawilding @vishpillai123
-zogotech/ @anzhely
-modeling/ @bdewilde
-# todo: target bias code => who ??
+**/pdp @kaylawilding @vishpillai123
