flattening datasets due to toml error

--- a/pipelines/custom/institution_id/config-TEMPLATE.toml
+++ b/pipelines/custom/institution_id/config-TEMPLATE.toml
@@ -22,48 +22,48 @@ disabilityflag = "Disability Status"
 raw_cohort = { 
   primary_keys = ["student_id"],
   non_null_cols = ["acad_year"],
-  train = { file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_cohort_train.csv" }, 
-  inference = { file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_cohort_inference.csv" } 
+  train_file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_cohort_train.csv", 
+  predict_file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_cohort_inference.csv",
 }
 raw_course = { 
   primary_keys = ["student_id", "course_id"],
   drop_cols = ["timestamp"],
-  train = { file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_course_train.csv" }, 
-  inference = { file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_course_inference.csv" } 
+  train_file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_course_train.csv",
+  predict_file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_course_inference.csv",
 }
 raw_semester = { 
-  train = { file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_semester_train.csv" }, 
-  inference = { file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_semester_inference.csv" } 
+  train_file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_semester_train.csv",
+  predict_file_path = "/Volumes/CATALOG/INST_ID_bronze/.../FILE_NAME_semester_inference.csv",
 }
 
 [datasets.silver]
 cohort = { 
-  train = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_cohort_train" }, 
-  inference = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_preprocessed_inference" }
+  train_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_cohort_train",
+  predict_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_preprocessed_inference",
 }
 course = { 
-  train = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_course_train" }, 
-  inference = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_course_inference" }
+  train_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_course_train",
+  predict_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_course_inference",
 }
 semester = { 
-  train = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_semester_train" }, 
-  inference = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_semester_inference" }
+  train_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_semester_train",
+  predict_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_semester_inference",
 }
 modeling = {
   primary_keys = ["student_id"],
-  train = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_modeling_train" }, 
+  train_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_modeling_train", 
 }
 model_features = {
   primary_keys = ["student_id"],
-  inference = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_model_features_inference" }, 
+  predict_table_path = "CATALOG.INST_ID_silver.DATASET_NAME_model_features_inference", 
 }
 
 [datasets.gold]
 sample_advisor_output = { 
-  train = { table_path = "CATALOG.INST_ID_gold.INST_ID_sample_advisor_output" }, 
+  train_table_path = "CATALOG.INST_ID_gold.INST_ID_sample_advisor_output", 
 }
 advisor_output = { 
-  inference = { table_path = "CATALOG.INST_ID_gold.INST_ID_predictions" }, 
+  predict_table_path = "CATALOG.INST_ID_gold.INST_ID_predictions", 
 }
 
 [model]
@@ -93,7 +93,9 @@ name = "graduation_150pct_time"
 category = "graduation"
 unit = "pct_completion"
 value = 150
-params = { intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] } }
+
+[preprocessing.target.params]
+intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] }
 
 [modeling.feature_selection]
 incomplete_threshold = 0.5
