update pull request typo

--- a/.github/workflows/inference-integration-deployment.yml
+++ b/.github/workflows/inference-integration-deployment.yml
@@ -2,7 +2,7 @@ name: inference-integration-deployment
 
 on:
 # dev or main here to work out
-  pull-request:
+  pull_request:
     branches:
       - develop
 
