--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pydyf~=0.8.0",
     "markdown~=3.5",
     "types-markdown~=3.8",
+    "tomlkit==0.13.3"
 ]
 
 [project.urls]
