adding quotes to this

--- a/pipelines/pdp/institution_id/config-RETENTION_TEMPLATE.toml
+++ b/pipelines/pdp/institution_id/config-RETENTION_TEMPLATE.toml
@@ -51,7 +51,7 @@ type_ = "first"
 [preprocessing.target]
 name = "retention"
 type_ = "retention"
-max_academic_year = 2024
+max_academic_year = "2024"
 
 [modeling.feature_selection]
 incomplete_threshold = 0.5
