--- a/pipelines/pdp/institution_id/config-GRADUATION_TEMPLATE.toml
+++ b/pipelines/pdp/institution_id/config-GRADUATION_TEMPLATE.toml
@@ -43,6 +43,7 @@ key_course_ids = []
 
 [preprocessing.selection]
 student_criteria = { enrollment_type = "FIRST-TIME", credential_type_sought_year_1 = "ASSOCIATE'S DEGREE" }
+# TODO: edit based on timelines for full-time vs. part-time students
 intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] }
 
 [preprocessing.checkpoint]
