adjusting commenting and options

--- a/pipelines/pdp/institution_id/config-GRADUATION_TEMPLATE.toml
+++ b/pipelines/pdp/institution_id/config-GRADUATION_TEMPLATE.toml
@@ -47,19 +47,19 @@ student_criteria = { enrollment_type = "FIRST-TIME", credential_type_sought_year
 intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] }
 
 [preprocessing.checkpoint]
-# TODO: select and edit option 1 if using a credits based checkpoint and remove option 2; select and edit option 2 if using a term-based checkpoint and remove option 1
+# TODO: select and edit option 1 if using a term-based checkpoint and remove option 2; select and edit option 2 if using a credits based checkpoint and remove option 1
 # Option 1
-name = "30_credits_earned"
-type_ = "first_at_num_credits_earned"
-min_num_credits = 30.0
-num_credits_col = "cumsum_num_credits_earned"
+name = "term 2 including only core terms"
+type_ = "nth"
+n = 1
+term_is_core_col = "term_is_core"
+exclude_non_core_terms = true
 
 # Option 2
-# name = "term 2 including only core terms"
-# type_ = "nth"
-# n = 1
-# term_is_core_col = "term_is_core"
-# exclude_non_core_terms = true
+# name = "30_credits_earned"
+# type_ = "first_at_num_credits_earned"
+# min_num_credits = 30.0
+# num_credits_col = "cumsum_num_credits_earned"
 
 [preprocessing.target]
 # TODO: edit based on target timeline for school
