--- a/pipelines/pdp/institution_id/h2o/config-TEMPLATE.toml
+++ b/pipelines/pdp/institution_id/h2o/config-TEMPLATE.toml
@@ -65,7 +65,7 @@ collinear_threshold = 10.0
 # force_include_cols = []
 
 [modeling.training]
-primary_metric = "log_loss"
+primary_metric = "logloss"
 timeout_minutes = 10
 # exclude_frameworks = ["XGBoost", "GBM"]
 # exclude_cols = []
